# flutter_demo

./: .gitignore  ARCH.md  LICENSE  README.md  docker-compose.yml  env.proxy.example
db/init/: 001_demo.sql
docs/: ARCH.md  android-emulator-dev-env.md
e2e/: pyproject.toml
e2e/tests/: test_ui.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/example/demomobile/demo_mobile/: MainActivity.kt
mobile/lib/: main.dart
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html
scripts/: host-proxy.env.example  install-android-dev-env.sh  record-dependency-install.sh  run-e2e.sh  run-local-dev.sh
server/: Cargo.toml  Dockerfile
server/src/: main.rs
